view pager+Fragment 上下滑动，以及下拉刷新

--- a/xrefresh_library/src/main/res/values/attrs.xml
+++ b/xrefresh_library/src/main/res/values/attrs.xml
@@ -6,4 +6,10 @@
         <attr name="autoRefresh" format="boolean" />
         <attr name="autoLoadMore" format="boolean" />
     </declare-styleable>
+
+    <declare-styleable name="HeaderViewPager">
+        <attr name="hvp_topOffset" format="dimension" />
+        <attr name="hvp_headerLayout" format="reference" />
+        <attr name="hvp_floatLayout" format="reference" />
+    </declare-styleable>
 </resources>
