--- a/app/src/main/res/layout/activity_main_contorl.xml
+++ b/app/src/main/res/layout/activity_main_contorl.xml
@@ -21,5 +21,10 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <include layout="@layout/layout_tab" />
+    <gzdx.com.mytestapp.ui.widget.TabHome
+        android:id="@+id/tabhome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        />
 </LinearLayout>
